@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+February 17, 2011
+* [antonin] now allows 16-bit precision for mj2 encoding and decoding (solves Issue 49 and Issue 63). Credit to Winfried.
+
 February 9, 2011
 ! [antonin] renamed "java sources" to "java-sources" to avoid blank space
 - [antonin] removed opj_config.h.in from svn, as it is automaticaly generated by autoheader when calling ./bootstrap.sh
@@ -17,7 +20,7 @@ January 30, 2011
 - [antonin] removed depcomp file from trunk (automatically copied by automake in main folder)
 
 January 29, 2011
-* [antonin] removed 'é' in license header to prevent warning C4819 (see http://code.google.com/p/openjpeg/issues/detail?id=57).
+* [antonin] removed 'é' in license header to prevent warning C4819 (see Issue 57).
 
 January 24, 2011
 - [antonin] remove more obsolete VS files. Left only mj2_to_metadata VS files, as this is the only executable not yet handled by CMake.
@@ -34,7 +37,7 @@ January 18, 2011
 ! [rdieter] cmake: SOVERSION change to 1 (from 1.4) to match auto-tools
 
 January 17, 2011
-- [rdieter] remove generated files (ticket 52)
+- [rdieter] remove generated files (Issue 52)
 
 January 16, 2011
 * [antonin] convert.c: inclusion of endian.h has to be different on APPLE platforms
